--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "swr": "^2.1.5",
     "zod": "^3.21.4"
   },
